<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:layout_marginBottom="40dp"
    tools:context=".ui.fragments.DashboardFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/grey_5"
        android:fitsSystemWindows="true"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <androidx.core.widget.NestedScrollView
                android:id="@+id/nested_scroll_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scrollbars="none"
                android:scrollingCache="true">




                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingLeft="@dimen/spacing_large"
                    android:paddingRight="@dimen/spacing_large">

                    <androidx.cardview.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:cardBackgroundColor="@color/light_blue_500"
                        app:cardCornerRadius="6dp"
                        app:cardElevation="2dp"
                        app:cardUseCompatPadding="true">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:orientation="vertical">


                            <View
                                android:layout_width="0dp"
                                android:layout_height="@dimen/spacing_mxlarge" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/text_total_balance"
                                android:textAppearance="@style/Base.TextAppearance.AppCompat.Subhead"
                                android:textColor="@color/light_blue_50" />

                            <TextView
                                android:id="@+id/textBalance"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/total_balance_format"
                                tools:text="$500"
                                android:textAppearance="@style/Base.TextAppearance.AppCompat.Display1"
                                android:textColor="@android:color/white"
                                app:fontFamily="sans-serif-medium" />


                            <View
                                android:layout_width="0dp"
                                android:layout_height="@dimen/spacing_mxlarge" />

                        </LinearLayout>

                    </androidx.cardview.widget.CardView>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/spacing_small" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <androidx.cardview.widget.CardView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            app:cardCornerRadius="6dp"
                            app:cardElevation="2dp"
                            app:cardUseCompatPadding="true">

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:gravity="center_vertical"
                                android:orientation="horizontal"
                                android:padding="@dimen/spacing_large">

                                <RelativeLayout
                                    android:layout_width="25dp"
                                    android:layout_height="25dp">

                                    <ImageView
                                        android:layout_width="match_parent"
                                        android:layout_height="match_parent"
                                        android:layout_centerInParent="true"
                                        app:srcCompat="@drawable/shape_circle"
                                        app:tint="@color/grey_10" />

                                    <ImageView
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:layout_centerHorizontal="true"
                                        android:layout_centerVertical="true"
                                        app:srcCompat="@drawable/ic_expense" />

                                </RelativeLayout>

                                <View
                                    android:layout_width="@dimen/spacing_mlarge"
                                    android:layout_height="0dp" />

                                <LinearLayout
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:orientation="vertical">

                                    <TextView
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:text="TOTAL EXPENSE"
                                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Caption"
                                        android:textColor="@color/grey_40"
                                        app:fontFamily="sans-serif-medium" />

                                    <TextView
                                        android:id="@+id/textExpense"
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        tools:text="-$10.34"
                                        android:text="@string/expense_format"
                                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Subhead"
                                        android:textColor="@color/indigo_900"
                                        app:fontFamily="sans-serif-medium" />
                                </LinearLayout>

                            </LinearLayout>

                        </androidx.cardview.widget.CardView>

                        <View
                            android:layout_width="@dimen/spacing_small"
                            android:layout_height="0dp" />

                        <androidx.cardview.widget.CardView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            app:cardCornerRadius="6dp"
                            app:cardElevation="2dp"
                            app:cardUseCompatPadding="true">

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:gravity="center_vertical"
                                android:orientation="horizontal"
                                android:padding="@dimen/spacing_large">

                                <RelativeLayout
                                    android:layout_width="25dp"
                                    android:layout_height="25dp">

                                    <ImageView
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:layout_centerInParent="true"
                                        app:srcCompat="@drawable/ic_income" />

                                    <ImageView
                                        android:layout_width="15dp"
                                        android:layout_height="15dp"
                                        android:layout_centerInParent="true"
                                        app:srcCompat="@drawable/ic_income"
                                        app:tint="@color/grey_40" />

                                </RelativeLayout>

                                <View
                                    android:layout_width="@dimen/spacing_mlarge"
                                    android:layout_height="0dp" />

                                <LinearLayout
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:orientation="vertical">

                                    <TextView
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:text="TOTAL INCOME"
                                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Caption"
                                        android:textColor="@color/grey_40"
                                        app:fontFamily="sans-serif-medium" />

                                    <TextView
                                        android:id="@+id/textIncome"
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        tools:text="-$20.34"
                                        android:text="@string/income_format"                                            android:textAppearance="@style/Base.TextAppearance.AppCompat.Subhead"
                                        android:textColor="@color/indigo_900"
                                        app:fontFamily="sans-serif-medium" />
                                </LinearLayout>

                            </LinearLayout>

                        </androidx.cardview.widget.CardView>

                    </LinearLayout>




                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">
                        <LinearLayout
                            android:id="@+id/dashboard_group"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">
                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="@dimen/spacing_middle"
                                android:layout_marginBottom="@dimen/spacing_medium"
                                android:gravity="center"
                                android:text="Recent Transactions"
                                android:textAppearance="@style/Base.TextAppearance.AppCompat.Body2"
                                android:textColor="@color/grey_40"
                                app:fontFamily="sans-serif-medium" />

                            <androidx.recyclerview.widget.RecyclerView
                                android:id="@+id/recyclerView_dashboard"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="16dp"
                                tools:listitem="@layout/row_layout" />
                        </LinearLayout>

                        <ViewStub
                            android:id="@+id/emptyStateLayout"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout="@layout/empty_state_layout"
                            android:visibility="gone" />
                    </LinearLayout>


                    <View
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/spacing_large" />


                </LinearLayout>

            </androidx.core.widget.NestedScrollView>



        </RelativeLayout>
        <ProgressBar
            android:id="@+id/dashboardProgressBar"
            style="?attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="invisible"
            android:background="@android:color/transparent"
            android:layout_marginBottom="10dp"
            android:layout_gravity="center"
            />

    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>
